The description text on the class management page is vertically aligned to middle again. However the horizontal scrollbar will no longer appear in the bottom of the table cell if needed. connect.php file now contains correct data for logging into the database.

--- a/styles/list.css
+++ b/styles/list.css
@@ -485,6 +485,11 @@ td{
 }
 .column3 div{
 	overflow: auto;
+	max-height: 10.2vh;
+	/*height: 10.2vh;*/
+	padding: 0;
+	margin: 0;
+	vertical-align: middle;
 }
 #description{
 	background-color: #CDFFCD;
